[LMP] Refactor devices management to be the responsibility of sync plugins

--- a/src/plugins/lmp/plugins/dumbsync/CMakeLists.txt
+++ b/src/plugins/lmp/plugins/dumbsync/CMakeLists.txt
@@ -7,4 +7,5 @@ LC_DEFINE_PLUGIN (
 		dumbsync.cpp
 	SETTINGS lmpdumbsyncsettings.xml
 	QT_COMPONENTS Concurrent Gui
+	LINK_LIBRARIES leechcraft-lmp-util
 	)
