[Vrooby] Move TrayProxyModel out of trayview.cpp
It's a sufficiently big class now to warrant its own TU.

--- a/src/plugins/vrooby/CMakeLists.txt
+++ b/src/plugins/vrooby/CMakeLists.txt
@@ -4,10 +4,11 @@ include (InitLCPlugin NO_POLICY_SCOPE)
 
 LC_DEFINE_PLUGIN (
 	SRCS
-		vrooby.cpp
-		trayview.cpp
 		backends/udisks2/udisks2backend.cpp
 		backends/udisks2/dbus/manager.cpp
+		trayproxymodel.cpp
+		trayview.cpp
+		vrooby.cpp
 	QT_COMPONENTS DBus QuickWidgets
 	INSTALL_SHARE
 	)
