[Tools] Build with clang on opensuse_factory for now

--- a/tools/docker/runci/opensuse_factory/Dockerfile
+++ b/tools/docker/runci/opensuse_factory/Dockerfile
@@ -4,5 +4,5 @@ RUN eatmydata git clone https://github.com/0xd34df00d/leechcraft.git && \
   cd leechcraft && \
   mkdir build && \
   cd build && \
-  eatmydata cmake ../src --preset opensuse_factory && \
+  eatmydata cmake ../src -DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++ --preset opensuse_factory && \
   eatmydata cmake --build . -j$(nproc) -- -k
