[Tools] Move clang declaration to CMakePresets

--- a/tools/docker/runci/opensuse_factory/Dockerfile
+++ b/tools/docker/runci/opensuse_factory/Dockerfile
@@ -2,8 +2,8 @@ FROM leechcraft/ci_opensuse_factory:latest
 
 WORKDIR /work
 
-RUN --mount=type=bind,source=.,target=/work/leechcraft,ro \
-  mkdir build && \
-  cd build && \
-  eatmydata cmake -DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++ /work/leechcraft/src --preset opensuse_factory && \
+RUN --mount=type=bind,source=.,target=/work/leechcraft,rw \
+    --mount=type=tmpfs,target=/work/build \
+  cd /work/build && \
+  eatmydata cmake /work/leechcraft/src --preset opensuse_factory_clang && \
   eatmydata cmake --build . -j$(nproc) -- -k
