[LMP BS] Link to the lmp-util library for album art stuff

--- a/src/plugins/lmp/plugins/brainslugz/CMakeLists.txt
+++ b/src/plugins/lmp/plugins/brainslugz/CMakeLists.txt
@@ -10,5 +10,6 @@ LC_DEFINE_PLUGIN (
 		checker.cpp
 		progressmodelmanager.cpp
 	QT_COMPONENTS Concurrent QuickWidgets
+	LINK_LIBRARIES leechcraft-lmp-util
 	INSTALL_SHARE
 	)
