[LMP MTPSync] Refactor to be ISyncPlugin
Getting rid of IUnmountableSync, slowly but surely.

--- a/src/plugins/lmp/plugins/mtpsync/CMakeLists.txt
+++ b/src/plugins/lmp/plugins/mtpsync/CMakeLists.txt
@@ -6,7 +6,10 @@ find_package (PkgConfig)
 pkg_check_modules (MTP REQUIRED IMPORTED_TARGET libmtp)
 
 LC_DEFINE_PLUGIN (
-	SRCS mtpsync.cpp
+	SRCS
+		mtp.cpp
+		mtphelpers.cpp
+		mtpsync.cpp
 	QT_COMPONENTS Concurrent Gui
 	LINK_LIBRARIES PkgConfig::MTP
 	)
