[LMP MTPSync] Proper album art embedding

--- a/src/plugins/lmp/plugins/mtpsync/CMakeLists.txt
+++ b/src/plugins/lmp/plugins/mtpsync/CMakeLists.txt
@@ -11,5 +11,5 @@ LC_DEFINE_PLUGIN (
 		mtphelpers.cpp
 		mtpsync.cpp
 	QT_COMPONENTS Concurrent Gui
-	LINK_LIBRARIES PkgConfig::MTP
+	LINK_LIBRARIES PkgConfig::MTP PkgConfig::TagLib
 	)
