[Azoth Sarin] Some further progress on group chats

--- a/src/plugins/azoth/plugins/sarin/CMakeLists.txt
+++ b/src/plugins/azoth/plugins/sarin/CMakeLists.txt
@@ -29,7 +29,9 @@ LC_DEFINE_PLUGIN (
 		filetransferbase.cpp
 		filetransferin.cpp
 		filetransferout.cpp
+		groupchatentry.cpp
 		groupjoinwidget.cpp
+		groupsmanager.cpp
 		$<$<BOOL:${ENABLE_MEDIACALLS}>:
 			audiocall.cpp
 			audiocalldevice.cpp
