[Azoth Sarin] Some progress towards conferences handling

--- a/src/plugins/azoth/plugins/sarin/CMakeLists.txt
+++ b/src/plugins/azoth/plugins/sarin/CMakeLists.txt
@@ -29,6 +29,7 @@ LC_DEFINE_PLUGIN (
 		filetransferbase.cpp
 		filetransferin.cpp
 		filetransferout.cpp
+		confsmanager.cpp
 		groupchatentry.cpp
 		groupjoinwidget.cpp
 		groupsmanager.cpp
