[Tools] Install tox on opensuse factory

--- a/tools/docker/base/opensuse_factory/Dockerfile
+++ b/tools/docker/base/opensuse_factory/Dockerfile
@@ -5,5 +5,5 @@ RUN zypper ar 'https://download.opensuse.org/source/tumbleweed/repo/oss/' oss-sr
     zypper -n in eatmydata && \
     eatmydata zypper dup -y && \
     eatmydata zypper -n si -d leechcraft && \
-    eatmydata zypper -n in git gzip libboost_container-devel liblastfm-qt6-devel qt6-networkauth-devel && \
-    eatmydata zypper -n in clang
+    eatmydata zypper -n in git gzip libboost_container-devel liblastfm-qt6-devel qt6-networkauth-devel c-toxcore-devel && \
+    eatmydata zypper -n in clang ninja
