[Azoth Sarin] Some progress towards legacy conferences handling

--- a/src/plugins/azoth/plugins/sarin/CMakeLists.txt
+++ b/src/plugins/azoth/plugins/sarin/CMakeLists.txt
@@ -29,6 +29,8 @@ LC_DEFINE_PLUGIN (
 		filetransferbase.cpp
 		filetransferin.cpp
 		filetransferout.cpp
+		confentry.cpp
+		confparticipant.cpp
 		confsmanager.cpp
 		groupchatentry.cpp
 		groupjoinwidget.cpp
