[Azoth Sarin] Split BaseMessage out of ChatMessage

--- a/src/plugins/azoth/plugins/sarin/CMakeLists.txt
+++ b/src/plugins/azoth/plugins/sarin/CMakeLists.txt
@@ -29,6 +29,7 @@ LC_DEFINE_PLUGIN (
 		filetransferbase.cpp
 		filetransferin.cpp
 		filetransferout.cpp
+		basemessage.cpp
 		confentry.cpp
 		confparticipant.cpp
 		confsmanager.cpp
