--- a/src/plugins/azoth/plugins/sarin/CMakeLists.txt
+++ b/src/plugins/azoth/plugins/sarin/CMakeLists.txt
@@ -31,6 +31,7 @@ LC_DEFINE_PLUGIN (
 		filetransferout.cpp
 		basemessage.cpp
 		confentry.cpp
+		confmessage.cpp
 		confparticipant.cpp
 		confsmanager.cpp
 		groupchatentry.cpp
