[Azoth] Strongly typed, emitter-based IMediaCall signals

--- a/src/plugins/azoth/plugins/sarin/CMakeLists.txt
+++ b/src/plugins/azoth/plugins/sarin/CMakeLists.txt
@@ -44,5 +44,7 @@ LC_DEFINE_PLUGIN (
 			calldatawriter.cpp
 			>
 	QT_COMPONENTS Sql Widgets ${EXTRA_MULTIMEDIA_LIBRARY}
-	LINK_LIBRARIES PkgConfig::TOX
+	LINK_LIBRARIES
+		leechcraft-azoth-util
+		PkgConfig::TOX
 	)
