--- a/src/plugins/azoth/plugins/modnok/CMakeLists.txt
+++ b/src/plugins/azoth/plugins/modnok/CMakeLists.txt
@@ -7,6 +7,7 @@ LC_DEFINE_PLUGIN (
 		modnok.cpp
 	SETTINGS azothmodnoksettings.xml
 	QT_COMPONENTS Widgets
+	LINK_LIBRARIES leechcraft-azoth-util
 	INSTALL_SHARE
 	)
 install (PROGRAMS lc_azoth_modnok_latexconvert.sh DESTINATION ${LC_SHARE_DEST}/azoth)
