[Azoth] Refactor out incoming file transfer handling

--- a/src/plugins/azoth/CMakeLists.txt
+++ b/src/plugins/azoth/CMakeLists.txt
@@ -46,6 +46,7 @@ LC_DEFINE_PLUGIN (
 		components/chat/chattabpartstatemanager.cpp
 		components/chat/chattabwebview.cpp
 		components/chat/contactdropfilter.cpp
+		components/chat/filetransfersection.cpp
 		components/chat/msgeditautocompleter.cpp
 		components/chat/msgformatterwidget.cpp
 		components/chat/richserializer.cpp
