[Azoth] Refactor file transfers and ownership
Supposedly that means less bugs.

Also, the UI representation in the UI has changed, and each incoming
file transfer request in a chat window is represented by a dedicated pane.

--- a/src/plugins/azoth/CMakeLists.txt
+++ b/src/plugins/azoth/CMakeLists.txt
@@ -35,6 +35,7 @@ endif ()
 add_util_library (azoth-util
 	SRCS
 		util/azoth/emitters/mediacall.cpp
+		util/azoth/emitters/transfermanager.cpp
 		util/azoth/hooks.cpp
 	USES Widgets
 	)
@@ -46,6 +47,7 @@ LC_DEFINE_PLUGIN (
 		components/chat/chattabpartstatemanager.cpp
 		components/chat/chattabwebview.cpp
 		components/chat/contactdropfilter.cpp
+		components/chat/fileofferedpane.cpp
 		components/chat/filetransfersection.cpp
 		components/chat/msgeditautocompleter.cpp
 		components/chat/msgformatterwidget.cpp
