[Overall] Refactor `IJobHolder` and introduce `Util::ProgressManager`
Instead of an ugly mix of role- and column-based access to job holder
data, which also tied the job holder model column count to the
presentation, do it properly and rely on semantically presented roles.

`Util::ProgressManager` also simplifies the very generic case of a
plugin just maintaining a list of one-off, short-running tasks/processes.

--- a/src/util/xpc/CMakeLists.txt
+++ b/src/util/xpc/CMakeLists.txt
@@ -13,7 +13,9 @@ add_util_library (util-xpc
 		anconstantsdefs.cpp
 		downloadhelpers.cpp
 		downloaderrorstrings.cpp
+		progressmanager.cpp
 	DEPENDS
+		leechcraft-util-models
 		leechcraft-util-sll
 		leechcraft-util-sys
 	USES Widgets
