[BT] Create IJobHolder representation widget only when representation requested
This moves IJobHolder widget/toolbar/menu ownership to the
IJobHolderRepresentationHandler instances, which are then only created
when somebody (i.e. Summary) request them. This makes the code much more
straightforward, and also improves performance if Summary isn't open.

--- a/src/plugins/bittorrent/CMakeLists.txt
+++ b/src/plugins/bittorrent/CMakeLists.txt
@@ -41,7 +41,7 @@ LC_DEFINE_PLUGIN (
 		ltutils.cpp
 		listactions.cpp
 		alertdispatcher.cpp
-
+		representationhandler.cpp
 		banpeersdialog.cpp
 		addwebseeddialog.cpp
 		ipvalidators.cpp
