[Summary] Rename SummaryTagsFilter → JobsPresentationModel

--- a/src/plugins/summary/CMakeLists.txt
+++ b/src/plugins/summary/CMakeLists.txt
@@ -6,7 +6,7 @@ LC_DEFINE_PLUGIN (
 	SRCS
 		summary.cpp
 		summarywidget.cpp
-		summarytagsfilter.cpp
+		jobspresentationmodel.cpp
 	INSTALL_SHARE
 	QT_COMPONENTS Widgets
 	)
