--- a/src/plugins/lhtr/CMakeLists.txt
+++ b/src/plugins/lhtr/CMakeLists.txt
@@ -7,6 +7,8 @@ option (WITH_LHTR_HTML "Build extended support for (invalid) HTML" ON)
 if (WITH_LHTR_HTML)
 	find_package (PkgConfig)
 	pkg_check_modules (Tidy REQUIRED IMPORTED_TARGET tidy)
+	find_path (TidyH_DIR tidy.h HINTS ${Tidy_INCLUDE_DIRS} PATH_SUFFIXES tidy)
+	target_include_directories (PkgConfig::Tidy SYSTEM INTERFACE ${TidyH_DIR})
 	set (TIDY_LIB PkgConfig::Tidy)
 	add_definitions (-DWITH_HTMLTIDY)
 endif ()
