--- a/tools/docker/base/debian_unstable/Dockerfile
+++ b/tools/docker/base/debian_unstable/Dockerfile
@@ -1,23 +1,65 @@
-FROM     debian:unstable
+FROM debian:unstable
 
-RUN apt-get update
-RUN apt-get install -q -y eatmydata
-
-RUN eatmydata apt-get dist-upgrade -q -y
-
-RUN eatmydata apt install -q -y cmake debhelper libaspell-dev \
-        libboost-system-dev libboost-date-time-dev libboost-filesystem-dev \
-        libboost-program-options-dev libboost-regex-dev libboost-thread-dev libboost-locale-dev \
-        libbz2-dev libcurl4-openssl-dev libdjvulibre-dev libgeoip-dev libguess-dev libhunspell-dev \
-        liblastfm5-dev libmagic-dev libmtp-dev libotr5-dev libpcre3-dev \
-        libpoppler-cpp-dev libpoppler-qt5-dev libqca-qt5-2-dev libqt5scintilla2-dev \
-        qtbase5-dev libqt5webkit5-dev libqt5xmlpatterns5-dev libqt5svg5-dev qttools5-dev-tools qttools5-dev libqt5x11extras5-dev qtscript5-dev  \
-        libqwt-qt5-dev libqxmpp-dev \
-        libspeex-dev libtag1-dev libtidy-dev libtorrent-rasterbar-dev \
+RUN apt-get update && \
+    apt-get install -q -y eatmydata && \
+    eatmydata apt-get dist-upgrade -q -y && \
+    eatmydata apt-get install -q -y \
+        cmake ninja-build clang git pkg-config \
+        qt6-base-dev qt6-base-private-dev \
+        qt6-tools-dev qt6-tools-dev-tools \
+        qt6-svg-dev \
+        qt6-declarative-dev qt6-declarative-private-dev \
+        qt6-5compat-dev \
+        qt6-webchannel-dev \
+        qt6-webengine-dev \
+        qt6-scxml-dev \
+        qt6-networkauth-dev \
+        qt6-positioning-dev \
+        libboost-dev \
+        libboost-date-time-dev \
+        libboost-filesystem-dev \
+        libboost-program-options-dev \
+        libboost-thread-dev \
+        libboost-locale-dev \
+        libboost-container-dev \
+        libx11-dev \
+        libx11-xcb-dev \
+        libxkbfile-dev \
+        libxcomposite-dev \
+        libxrender-dev \
+        libxdamage-dev \
+        libxcb-xkb-dev \
+        libxcb-render0-dev \
+        libxcb-composite0-dev \
+        libxcb-render-util0-dev \
+        libxcb-damage0-dev \
+        libxss-dev \
+        libtorrent-rasterbar-dev \
+        libmaxminddb-dev \
+        libqxmppqt6-dev \
+        libqca-qt6-dev \
+        libotr5-dev \
+        libpurple-dev \
+        libtoxcore-dev \
+        libhunspell-dev \
+        libtag-dev \
+        libgstreamer1.0-dev \
+        libchromaprint-dev \
+        libavcodec-dev \
+        libavformat-dev \
+        libavutil-dev \
+        libmtp-dev \
+        libpoppler-qt6-dev \
+        libdjvulibre-dev \
+        libquazip1-qt6-dev \
+        libtidy-dev \
+        libidn-dev \
+        libqrencode-dev \
+        libsensors-dev \
+        libmagic-dev \
         libudev-dev \
-		libx11-dev libxkbfile-dev libxcomposite-dev libxrender-dev libxcb-xkb-dev libxcb-render0-dev libxcb-composite0-dev libxcb-render-util0-dev \
-		libxml2-dev po-debconf x11proto-randr-dev zlib1g-dev \
-        libnl-3-dev libnl-route-3-dev libpurple-dev libvlc-dev libimobiledevice-dev libgpod-dev \
-        libavcodec-dev libavformat-dev libavdevice-dev libavutil-dev libswscale-dev libswresample-dev libpostproc-dev libchromaprint-dev \
-        git \
-        libgstreamer1.0-dev libsensors4-dev
+        liblastfm6-dev \
+        libqtermwidget-dev \
+        libutf8proc-dev \
+        libqscintilla2-qt6-dev \
+    && apt-get clean
